--- a/src/app/ui/videos.module.css
+++ b/src/app/ui/videos.module.css
@@ -43,16 +43,20 @@
   }
   .channelicon{
     flex: 1;
+    align-self: center;
+    margin-top: 10px;
   }
   .name {
     font-size: 10px;
     font-weight: bold;
     color: #333;
-    margin-top: 10px;
     align-items: center;
     flex: 1;
+    padding: 5px;
+    margin-left: 10px;
   }
   .description {
+    
     flex:4;
     font-size: 12px;
   }
