add admin user listing and improve video component styling

--- a/src/app/ui/videos.module.css
+++ b/src/app/ui/videos.module.css
@@ -79,7 +79,14 @@
   .description {
     
     flex:4;
+    
+  }
+  .wenzi{
+    margin-top: 10px;
     font-size: 12px;
+    display: flex;
+    flex-direction: column;
+
   }
   .date{
     display: inline-block;
