--- a/src/app/ui/videos.module.css
+++ b/src/app/ui/videos.module.css
@@ -23,6 +23,7 @@
     position: relative;
   }
 
+
   .cards.blurred {
     filter: blur(8px);
     pointer-events: none;
@@ -44,15 +45,31 @@
 
   .v{
     margin-top: 20px;
-    height: 300px;
-    width: 350px;
-    background-color: blueviolet;
+
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* 或者 contain，根据需求选择 */
+      display: block;
+    
+  
   }
+  .v video {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* 或者 contain，根据需求选择 */
+    display: block;
+  }
+  
   .infobox{
     display: flex;
     flex-direction: row;
     background-color: aqua;
     margin: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* 或者 contain，根据需求选择 */
+
+
   }
   .au{
     display: flex;
