--- a/src/app/ui/nav.module.css
+++ b/src/app/ui/nav.module.css
@@ -10,6 +10,7 @@
     background-color: orange;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     align-items: center;
+    z-index: 1000;
   }
   
   .logoContainer {
